# Dna_analyzer

./: .gitignore  CMakeLists.txt
CONTROLLER/: Controller.cpp  Controller.h
DATASEQUENCE/: my_dna_seq.rawdna
MODEL/: Command.cpp  Command.h  CommandParser.cpp  CommandParser.h  CommandRun.cpp  CommandRun.h  DATA.cpp  DATA.h  Decerator.cpp  Decerator.h  DnaSequence.cpp  DnaSequence.h  Nucleotide.cpp  Nucleotide.h  WriteReadFile.cpp  WriteReadFile.h  abstractDecerator.cpp  abstractDecerator.h
VIEW/: CLI.cpp  CLI.h  Cmd.cpp  Cmd.h
